@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class Router {
}

' Controller for product operations
class ProductController {
    - _repo: IProductRepositories
    + GetProductById(Guid id): Task<IActionResult>
}

' Repository interface defining the GetProductById method
interface IProductRepositories {
    + GetProductById(Guid id): Task<MenuItem>
}

' Repository implementation that delegates to the DAO
class ProductRepositories {
    - _dao: ProductDAO
    + GetProductById(Guid id): Task<MenuItem>
}

' Data Access Object handling database interactions
class ProductDAO {
    - _client.From<MenuItem> : ISupabaseTable<MenuItem>
    - _client.From<Shop> : ISupabaseTable<Shop>
    - _client.From<Profile> : ISupabaseTable<Profile>
    + GetProductById(Guid id): Task<MenuItem>
}

' Domain model representing a product
class MenuItem {
    + Id: Guid
    + ShopId: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + Category: string
    + IsAvailable: bool
    + Ingredient: string
    + NutritionalIfo: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

class Shop {
    + Id: Guid
    + Name: string
    + Address: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + OwnerId: Guid
}


APIGateway -- Router
Router -- ProductController
ProductController -- IProductRepositories 
IProductRepositories <|-- ProductRepositories
ProductRepositories "1"--"1..*" ProductDAO
ProductDAO "1" -- "0..*" MenuItem
ProductDAO -- Shop
ProductDAO  --  Profile

@enduml
